package Entity;

public interface Actuator {
    public void performAction(Object value);
}
